--- a/flex-conteiner/flex-flow/style.css
+++ b/flex-conteiner/flex-flow/style.css
@@ -14,7 +14,8 @@ body{
     background-color: blue;
     padding: 10px;
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: row wrap;
+    /* row ou colum */
 }
 .item{
     background-color: darkblue;
