--- a/flex-conteiner/align-items/style.css
+++ b/flex-conteiner/align-items/style.css
@@ -8,6 +8,10 @@ body{
     background-color: black;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
+    & h1{
+        font-size: 3em;
+        text-align: center;
+    }
 }
 
 #stretch{
