--- a/flex-conteiner/flex-direction/style.css
+++ b/flex-conteiner/flex-direction/style.css
@@ -7,6 +7,11 @@
 body{
     background-color: black;
     font-family: Arial, Helvetica, sans-serif;
+    & h1{
+        color: white;
+        text-align: center;
+        font-size: 3em;
+    }
 }
 
 #row{
