--- a/flex-conteiner/flex-flow/style.css
+++ b/flex-conteiner/flex-flow/style.css
@@ -8,6 +8,10 @@ body{
     background-color: black;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
+    & h1{
+        text-align: center;
+        font-size: 3em;
+    }
 }
 
 .containe{
